fix search result page wrapping

--- a/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
+++ b/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
@@ -2006,8 +2006,8 @@ select[name="archive-dropdown"] {
   text-decoration: none;
 }
 
-.page-title-above .page,
-.page-title-above .post,
+.page-title-above.page .page,
+.page-title-above.single .post,
 .page-title-above.blog .main,
 .page-title-above.archive .main {
   display: -webkit-box;
@@ -2017,8 +2017,8 @@ select[name="archive-dropdown"] {
       flex-wrap: wrap;
 }
 
-.page-title-above.right-sidebar .page,
-.page-title-above.right-sidebar .post,
+.page-title-above.page.right-sidebar .page,
+.page-title-above.single.right-sidebar .post,
 .page-title-above.blog.right-sidebar .main,
 .page-title-above.archive.right-sidebar .main {
   -webkit-box-orient: horizontal;
@@ -2027,8 +2027,8 @@ select[name="archive-dropdown"] {
           flex-direction: row;
 }
 
-.page-title-above.left-sidebar .page,
-.page-title-above.left-sidebar .post,
+.page-title-above.page.left-sidebar .page,
+.page-title-above.single.left-sidebar .post,
 .page-title-above.blog.left-sidebar .main,
 .page-title-above.archive.left-sidebar .main {
   -webkit-box-orient: horizontal;
